--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -46,7 +46,7 @@ ci_freebsd_task:
 
   cmake_configure_script: cmake -B "${BUILD_DIR}" -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
 
-  build_script: |
+  cmake_build_script: |
     cmake --build "${BUILD_DIR}"
 
   test_script: |
